--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -33,6 +33,46 @@
     </div>
 
     <p id="message" class="text-center text-sm mt-4 text-red-600"></p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Course Management System</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 flex justify-center items-center h-screen text-white">
+
+  <div class="bg-gray-800/80 backdrop-blur-md p-10 rounded-2xl shadow-2xl w-96 border border-gray-700">
+    <h1 class="text-2xl font-bold text-center mb-6 text-blue-400">Course Management System</h1>
+
+    <div class="space-y-3">
+      <input id="name" type="text" placeholder="Name" class="w-full p-2 bg-gray-700 text-white border border-gray-600 rounded focus:ring-2 focus:ring-blue-500 outline-none" />
+      <input id="email" type="email" placeholder="Email" class="w-full p-2 bg-gray-700 text-white border border-gray-600 rounded focus:ring-2 focus:ring-blue-500 outline-none" />
+      <input id="password" type="password" placeholder="Password" class="w-full p-2 bg-gray-700 text-white border border-gray-600 rounded focus:ring-2 focus:ring-blue-500 outline-none" />
+
+      <select id="role" class="w-full p-2 bg-gray-700 text-white border border-gray-600 rounded focus:ring-2 focus:ring-blue-500 outline-none">
+        <option value="">Select Role</option>
+        <option value="student">Student</option>
+        <option value="instructor">Instructor</option>
+      </select>
+
+      <button onclick="register()" class="bg-green-600 hover:bg-green-700 w-full py-2 rounded font-semibold transition duration-200">Register</button>
+
+      <p class="text-center text-gray-300">Already have an account?</p>
+
+      <button onclick="loginPage()" class="bg-blue-600 hover:bg-blue-700 w-full py-2 rounded font-semibold transition duration-200">
+        Go to Login
+      </button>
+    </div>
+
+    <p id="message" class="text-center text-sm mt-4 text-red-400"></p>
   </div>
 
   <script src="script.js"></script>
